feat: removed backup upload feature
